--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -16,7 +16,7 @@
           <span>Cantidad:{{cart.quantity}}</span>
         </li>
         <li>
-          <button class="btn btn-danger"(click)="removeToCart(cart.id)">Remover Producto</button>
+          <button class="btn btn-danger" (click)="removeToCart(cart.id)" routerLink="/">Remover Productos</button>
         </li>
       </ul>
     </div>
