--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -59,8 +59,8 @@
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Plomería</a>
             </li>
-           
-      
+
+
           </ul>
         </div>
         <!--Grid column-->
@@ -89,8 +89,8 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      © 2023 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      © 2023 Copyright: Angelo Diaz, Alan Escobar, Mayerly Solórzano,Paul Ponce
+      <h6> Fecha de Entrega: 08-02-2023 </h6>
     </div>
     <!-- Copyright -->
   </footer>
