--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -7,7 +7,8 @@
   <div class="col-sm-8 details">
     <h6><a routerLink="/details/{{item.id}}">{{item.name}}</a></h6>
     <p><b>Precio:{{item.price}}</b></p>
-    <p><span>Color:{{item.color}}</span><span>Categoria:{{item.category}}</span></p>
+    <p><span>Color:{{item.color}}</span></p>
+    <p><span>Categoria:{{item.category}}</span></p>
     <p>{{item.description}}</p>
   </div>
 </div>
