--- a/src/app/vendedor-add-product/vendedor-add-product.component.html
+++ b/src/app/vendedor-add-product/vendedor-add-product.component.html
@@ -1,3 +1,5 @@
+<br>
+<br>
 <div class="add-product">
   <h1> Añadir Nuevo Producto</h1>
   <p class="p-message">{{addProductMessage}}</p>
@@ -8,7 +10,9 @@
     <input class="form-input" name="category" ngModel  type="text" placeholder="Ingrese la categoria a la que pertenece el producto">
     <textarea class="form-input" name="description" ngModel  type="text" placeholder="Ingrese una descripcion para el producto"></textarea>
     <input class="form-input" name="image" ngModel  type="text" placeholder="Ingrese la Url de la imagen del producto">
-    <button class="form-button">Agregar Producto</button>
+    <button class="btn btn-primary">Agregar Producto</button>
   </form>
 </div>
+<br>
+<br>
 
