--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,19 +4,23 @@
   justify-content:space-between;
   background-color: #021730;
   padding: 10px;
-  
+
+}
+.nav-arriba img{
+  width:350px;
+  height:80px;
 }
 .nav-arriba .nav-search{
   flex:1;
   display:flex;
-  margin: 3% 1% 3% 50%;
+  margin: 2% 4% 2% 50%;
 }
 .nav {
   display: flex;
   justify-content:space-between;
   background-color: #b3b3b3;
   padding: 7px;
-  
+
 }
 .nav .nav-search input {
   flex:1;
@@ -24,12 +28,6 @@
   border: 1px solid rgb(0, 0, 0);
   height: 39px;
   border-right:none;
-}
-
-.nav .nav-search button {
-  color:rgb(0, 0, 0);
-  border: 1px solid rgb(0, 0, 0);
-  height: 39px;
 }
 
 .nav ul {
@@ -42,7 +40,7 @@
   text-decoration: none;
   cursor: pointer;
   color: black;
-  
+
 
 }
 .nav ul li{
