--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -31,13 +31,14 @@
         </div>
      </div>
      <div class="producto-footer">
-       <a routerLink="/details/{{item.id}}"><button class="button-detalle button1">Detalles</button></a>
-       <a href="#"><button class="button-add button1">Añadir (+)</button></a>
+       <a routerLink="/details/{{item.id}}"><button class="button-detalle button1 max-width">Detalles</button></a>
+       <a routerLink="/details/{{item.id}}"><button class="button-add button1 max-width"> Añadir (+)</button></a>
      </div>
     </div>
     </div>
  </div>
 </div>
+
 <div class="container2">
   <div class="row">
      <div class="col-sm-3" *ngFor="let item of trendyProducts">
@@ -60,6 +61,7 @@
      </div>
   </div>
  </div>
+
 <div class="separador2">
   <h1>R E C O M E N D A C I O N E S</h1>
 </div>
