--- a/src/app/vendedor-home/vendedor-home.component.html
+++ b/src/app/vendedor-home/vendedor-home.component.html
@@ -1,3 +1,5 @@
+<br>
+<br>
 <div class="product-list">
   <h1>Lista de Productos</h1>
   <p class="p-message">{{productMessage}}</p>
@@ -25,9 +27,11 @@
       <td>{{item.category}}</td>
       <td>{{item.description}}</td>
       <td>
-        <fa-icon (click)="deleteProduct(item.id)" [icon]="icon"></fa-icon>
+        <fa-icon (click)="deleteProduct(item.id)" [icon]="icon" routerLink="/"></fa-icon>
         <a class="adjust-update-link" routerLink="/vendedor-update-product/{{item.id}}"><fa-icon [icon]="editIcon"></fa-icon></a>
     </tr>
   </tbody>
   </table>
+  <br>
+  <br>
 </div>
