--- a/src/app/vendedor-update-product/vendedor-update-product.component.html
+++ b/src/app/vendedor-update-product/vendedor-update-product.component.html
@@ -1,3 +1,5 @@
+<br>
+<br>
 <div class="update-product">
   <h1> Editar Producto</h1>
   <p class="p-message">{{productMessage}}</p>
@@ -8,6 +10,8 @@
     <input class="form-input" name="category" ngModel="{{productData?.category}}"  type="text" placeholder="Ingrese la categoria a la que pertenece el producto">
     <textarea class="form-input" name="description" ngModel="{{productData?.description}}"  type="text" placeholder="Ingrese una descripcion para el producto"></textarea>
     <input class="form-input" name="image" ngModel="{{productData?.image}}"  type="text" placeholder="Ingrese la Url de la imagen del producto">
-    <button class="form-button">Actualizar Producto</button>
+    <button class="btn btn-primary">Actualizar Producto</button>
+    <br>
+    <br>
   </form>
 </div>
